--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,4 @@ mio = { version = "1.0.2", features = ["os-poll", "net", "os-ext"]}
 rocket = "0.5.1"
 serde = "1.0.215"
 serde_json = "1.0.133"
+sha2 = "0.10.8"
