--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ slog = "2.7.0"
 slog-term = "2.9.1"
 chrono = "0.4.38"
 mio = { version = "1.0.2", features = ["os-poll", "net", "os-ext"]}
-rocket = "0.5.1"
+rocket = { version = "0.5.1", features = ["json"]}
 serde = "1.0.215"
 serde_json = "1.0.133"
 sha2 = "0.10.8"
