Refactor Reflector To Allow For Reading MAC Address
Certain TLVs require that the reflector know the source MAC address of
the packet in which the TLV was received. With the Reflector's prior
architecture, accessing the sender's packet's source MAC address was not
possible. This new architecture allows for that, but does introduce some
complications (the biggest of which is seeing packets for a server on
the localhost [from a client on localhost] twice). I hope to be able to
fix that in the future.

TODO: Testing and other (minimal) code cleanup are still required.

Signed-off-by: Will Hawkins <hawkinsw@obs.cr>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,9 +10,10 @@ rand = "0.8.5"
 slog = "2.7.0"
 slog-term = "2.9.1"
 chrono = "0.4.38"
-mio = { version = "1.0.2", features = ["os-poll", "net", "os-ext"]}
 rocket = { version = "0.5.1", features = ["json"]}
 serde = "1.0.215"
 serde_json = "1.0.133"
 sha2 = "0.10.8"
 hmac = "0.12.1"
+pnet = "0.35.0"
+ctrlc = "3.4.5"
