Refactor Reading Incoming Packets
In order to prepare for letting the user choose between accepting
packets from a sender at the link layer or the network layer, this
change refactors how packets are read from the network, parsed and
filtered, scrutinized for test arguments and given to the handler for
processing.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,5 @@ sha2 = "0.10.8"
 hmac = "0.12.1"
 pnet = "0.35.0"
 ctrlc = "3.4.5"
+either = "1.13.0"
+etherparse = {version = "0.17", features = ["std"] }
