--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,4 @@ pnet = "0.35.0"
 ctrlc = "3.4.5"
 either = "1.13.0"
 etherparse = {version = "0.17", features = ["std"] }
+clio = {version="0.3.5", features=["clap-parse"]}
