Finish Support For User Choice Of How Reflector Should Listen
The user is now able to select (at the time that the Reflector is
launched) whether they want to listen for packets from a Sender at the
link or internet layer.

Listening at the link layer will allow more TLVs to execute (e.g.,
location) but may cause more runtime overhead. Listening at the internet
layer may keep certain TLVs from operating (again, e.g., location) but
may allow the Reflector to run with lower overhead.

More benchmarking will be done to quantify these overheads.

Signed-off-by: Will Hawkins <hawkinsw@obs.cr>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,3 +20,4 @@ ctrlc = "3.4.5"
 either = "1.13.0"
 etherparse = {version = "0.17", features = ["std"] }
 clio = {version="0.3.5", features=["clap-parse"]}
+mio = "1.0.3"
