--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,3 +21,8 @@ either = "1.13.0"
 etherparse = {version = "0.17", features = ["std"] }
 clio = {version="0.3.5", features=["clap-parse"]}
 mio = "1.0.3"
+syn = "2.0.100"
+quote = "1.0.40"
+
+[lib]
+proc-macro = true
