--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ clio = {version="0.3.5", features=["clap-parse"]}
 mio = "1.0.3"
 syn = "2.0.100"
 quote = "1.0.40"
+owning_ref = "0.4.1"
 
 [lib]
 proc-macro = true
