Include ipv6toolkit As Submodule
Signed-off-by: Will Hawkins <hawkinsw@obs.cr>

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,7 @@
 [submodule "nix"]
 	path = nix
 	url = git@github.com:hawkinsw/nix.git
+[submodule "third_party/ipv6toolkit"]
+	path = third_party/ipv6toolkit
+	url = https://github.com/cerfcast/ipv6toolkit.git
+	branch = stamp_extensions
