--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,11 @@ mio = "1.0.3"
 syn = "2.0.100"
 quote = "1.0.40"
 owning_ref = "0.4.1"
+yaml-rust2 = "0.10.3"
+hashlink = "0.10.0"
 
 [lib]
 proc-macro = true
+
+[lints.rust]
+dead_code = "allow"
