--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,6 +33,9 @@ jobs:
           override: true
       - uses: actions-rs/cargo@v1
         with:
+          command: build
+      - uses: actions-rs/cargo@v1
+        with:
           command: test
 
   fmt:
