Enable Trace-Level Debugging Output
According to the slog documentation
(https://docs.rs/slog/latest/slog/index.html#notable-details), trace and
debug messages are removed when the application is compiled at certain
optimization levels. Set slog so that the command-line options given by
the user allow for trace- and debug-level output at all compilation
levels.

Signed-off-by: Will Hawkins <hawkinsw@obs.cr>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ nix = { path="nix", features = ["socket", "net", "uio", "ioctl"]}
 insta-cmd = { path="third_party/insta-cmd" }
 clap = { version = "4.5.4", features = ["derive"] }
 rand = "0.8.5"
-slog = "2.7.0"
+slog = { version = "2.7.0", features = ["max_level_trace", "release_max_level_trace"] }
 slog-term = "2.9.1"
 chrono = "0.4.38"
 rocket = { version = "0.5.1", features = ["json"]}
